tests/reference/asr-test_set_object1-d9bd2e1.stderr
semantic error: Unhashable type: 'list[i32]'
 --> tests/errors/test_set_object1.py:4:17
  |
4 |     my_set: set[list[i32]] = {[1, 2], [3, 4]}
  |                 ^^^^^^^^^ Mutable type 'list[i32]' cannot be stored in a set.
